--- a/SSD Assignment/SSDAssignment.csproj
+++ b/SSD Assignment/SSDAssignment.csproj
@@ -14,6 +14,6 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="wwwroot\Uploads\" />
+    <Folder Include="wwwroot\Uploads\Listings\" />
   </ItemGroup>
 </Project>
