--- a/SSD Assignment/SSDAssignment.csproj
+++ b/SSD Assignment/SSDAssignment.csproj
@@ -14,6 +14,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="wwwroot\images\Listings\" />
     <Folder Include="wwwroot\Uploads\Listings\" />
   </ItemGroup>
