--- a/SSD Assignment/SSDAssignment.csproj
+++ b/SSD Assignment/SSDAssignment.csproj
@@ -8,6 +8,7 @@
     <Compile Remove="Migrations\20180724094613_jj.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Captcha" Version="4.3.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" PrivateAssets="All" />
