--- a/SSD Assignment/SSDAssignment.csproj
+++ b/SSD Assignment/SSDAssignment.csproj
@@ -10,6 +10,8 @@
     <Compile Remove="Migrations\20180725181133_UpdateAppUser4.Designer.cs" />
     <Compile Remove="Migrations\20180727170657_AddRole.cs" />
     <Compile Remove="Migrations\20180727170657_AddRole.Designer.cs" />
+    <Compile Remove="Migrations\20180727183648_listing.cs" />
+    <Compile Remove="Migrations\20180727183648_listing.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Captcha" Version="4.3.2" />
