Recaptcha, but not done

--- a/SSD Assignment/appsettings.json
+++ b/SSD Assignment/appsettings.json
@@ -8,4 +8,10 @@
       "Default": "Warning"
     }
   }
+  //{
+  //  "GoogleReCaptcha": {
+  //    "key": "6Lex8mYUAAAAACdnRLuBbhfQMg0WoHsckRTPxQyi",
+  //    "secret": "6Lex8mYUAAAAAHP7Ruu1UeFIyMbbxNGFPs1Zr2kZ"
+  //  }
+  }
 }
